--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(THIRD_PARTY_DIRS ${PROJECT_SOURCE_DIR}/third_party CACHE INTERNAL "")
@@ -149,7 +149,7 @@ endif()
 #        -Wextra
 #        -Wpedantic
 ##        -Werror
-#        -Wduplicated-cond
+#        -Wduplicated-cv_
 #        -Wduplicated-branches
 #        -Wlogical-op
 #        -Wnull-dereference
